--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
     "lint": "eslint --ext .js,.vue src",
     "test:unit": "jest --clearCache && vue-cli-service test:unit",
-    "test:ci": "npm run lint && npm run test:unit"
+    "test:ci": "npm run lint && npm run test:unit",
+    "commit": "git-cz"
+  },
+  "config": {
+    "commitizen": {
+    "path": "node_modules/cz-conventional-changelog"
+    }
   },
   "dependencies": {
     "axios": "0.18.1",
@@ -36,7 +42,9 @@
     "babel-jest": "23.6.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
     "chalk": "2.4.2",
+    "commitizen": "^4.2.4",
     "connect": "3.6.6",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "6.7.2",
     "eslint-plugin-vue": "6.2.2",
     "html-webpack-plugin": "3.2.0",
