--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "config": {
     "commitizen": {
-    "path": "node_modules/cz-conventional-changelog"
+      "path": "node_modules/cz-conventional-changelog"
     }
   },
   "dependencies": {
@@ -32,6 +32,8 @@
     "vuex": "3.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
     "@vue/cli-plugin-babel": "4.4.4",
     "@vue/cli-plugin-eslint": "4.4.4",
     "@vue/cli-plugin-unit-jest": "4.4.4",
