feat: 初步完成所有功能
完成页面权限，通知消息按钮权限。解决了路由在admin也显示的bug，登录跳转404或不属于本用户角色的页面bug。

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "node build/index.js --preview",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
     "lint": "eslint --ext .js,.vue src",
+    "lint:fix": "eslint --fix .js,.vue src",
     "test:unit": "jest --clearCache && vue-cli-service test:unit",
     "test:ci": "npm run lint && npm run test:unit",
     "commit": "git-cz"
@@ -49,6 +50,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "6.7.2",
     "eslint-plugin-vue": "6.2.2",
+    "eslint-plugin-vuefix": "^0.2.1",
     "html-webpack-plugin": "3.2.0",
     "mockjs": "1.0.1-beta3",
     "runjs": "4.3.2",
